Test stats and student